# winImgview

./: README.md  SETUP.md  package.json
frontend/: index.html
frontend/css/: style.css
frontend/js/: main.js
logs/: 2026-06-26.md  2026-06-27.md
meta/: CEREBRO.md  CHANGELOG.md  CONTEXT.md  DECISIONS.md  GLOSSARY.md  HISTORICO.md  IDEAS.md  INSTRUCTION_GUIDE.md  LOG-TEMPLATE.md  PROMPT_IA.md  ROADMAP.md  STATUS.md  demo.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
