[package]
name = "winimgview"
version = "0.2.0"
edition = "2021"
description = "Viewer de imagens para Windows com suporte a SVG vetorial e WebP"
authors = []

[lib]
name = "winimgview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decodificação de formatos raster (PNG, JPG, WebP, BMP, GIF, TIFF)
image = { version = "0.25", features = ["webp", "gif", "tiff", "bmp"] }

# Base64 para transferência frontend↔backend de dados de imagem raster
base64 = "0.22"

# Leitura de diretório e metadados de arquivo
walkdir = "2"

[profile.release]
# Otimização de tamanho — viewer leve é prioridade
opt-level = "s"
lto = true
codegen-units = 1
strip = true
